Dynamically added custom scrollbar styles don't apply https://bugs.webkit.org/show_bug.cgi?id=211219

Reviewed by Antti Koivisto.

`::-webkit-scrollbar` pseudo-element should be resolved eagerly during
style resolution, similar to `::first-line` and `::first-letter`.

* LayoutTests/fast/css/scrollbar-custom-dynamic-change-expected.html: Added.
* LayoutTests/fast/css/scrollbar-custom-dynamic-change.html: Added.
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resolveElement):

Canonical link: https://commits.webkit.org/265015@main